# spi_lcd_touch

./: sdkconfig  sdkconfig.old
components/CANBUS/: CMakeLists.txt  canbus.c
components/CANBUS/include/: canbus.h
components/disp_drv/: CMakeLists.txt  disp_drv.c
components/espressif__esp_lcd_gc9a01/: .component_hash  esp_lcd_gc9a01.c  idf_component.yml
components/espressif__esp_lcd_ili9341/: .component_hash  esp_lcd_ili9341.c  idf_component.yml
main/: CMakeLists.txt  filelist.txt  idf_component.yml  lvgl_demo_ui.c  spi_lcd_touch_example_main.c  ui.c  ui.h  ui_events.c  ui_events.h
main/can_task/: can_task.c  can_task.h
main/images/: ui_img_5700554_png.c  ui_img_6875758_png.c  ui_img_hal_png.c
main/lvgl_stuff/: lvgl_init.c  lvgl_init.h
main/nvs/: nvs.c  nvs.h
main/potik/: poti.c  poti.h
main/screens/: ui_Screen1.c  ui_Screen2.c  ui_Screen3.c  ui_Screen4.c  ui_Screen5.c
