idf_component_register(SRCS "spi_lcd_touch_example_main.c" "lvgl_demo_ui.c"
"screens/ui_Screen1.c"
"screens/ui_Screen2.c"
"screens/ui_Screen4.c"
"screens/ui_Screen5.c"
"ui.c"
"components/ui_comp_hook.c"
"ui_helpers.c"
"ui_events.c"
"images/ui_img_6875758_png.c"
"images/ui_img_hal_png.c"
"images/ui_img_5700554_png.c"
"potik/poti.c"
"lvgl_stuff/lvgl_init.c"
"can_task/can_task.c"

                       INCLUDE_DIRS ".")
